--- a/brouillon.scss
+++ b/brouillon.scss
@@ -1,135 +1,90 @@
-/* Services */
-@import "../../../assets/styles/00_utils/3_mixins";
-@import "../../../assets/styles/00_utils/4_fonts";
+&-form,
+&-form .col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
 
-.service_container {
-    align-self: center;
-    @include row_R;
-    flex-flow: wrap;
-    gap: 3.607084289931125%;
-    height: 100%;
-    justify-content: space-between;
-
-    .service-item {
+    .col-6 {
         flex: 1;
-        flex: 0 0 30.59527714004592%;
-        max-width: 30.59527714004592%;
-        margin: 0 0 3.607084289931125% 0;
-        .service-item-inner {
-            height: 100%;
-            padding: 30px 15px;
-            text-align: center;
+    }
+
+    .form-item {
+        margin-bottom: 1.875em;
+
+        .form-control {
+            width: 100%;
+            height: 3.125em;
+            border-radius: 1.5625em;
             background-color: var(--bg-black-100);
-            border: 1px solid var(--bg-black-75);
-            border-right-color: var(--bg-black-50);
-            border-bottom-color: var(--bg-black-50);
-
-            border-radius: 10px;
+            border: 1px solid var(--bg-black-50);
+            padding: 0.625em 1.5625em;
+            font-size: 1em;
+            color: var(--text-black-700);
             transition: all 0.3s ease;
-            cursor: pointer;
-            .icon {
-                display: block;
-                width: 60px;
-                height: 60px;
-                margin: 0 auto 30px;
-                border-radius: 50%;
-                font-size: 40px;
-                line-height: 60px;
-                text-align: center;
-                color: var(--skin-color);
-                transition: all 0.3s ease;
+            text-transform: none;
+            &:focus {
+                box-shadow: 0 0 1.25em rgba(48, 46, 77, 0.15);
             }
-            &:hover {
-                &::after {
-                    @include after_Before;
-                }
-                transform: scale(1.05);
-                box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
-                .icon {
-                    font-size: 25px;
-                    color: var(--bg-black-100);
-                    background-color: var(--skin-color);
-                }
-            }
+        }
 
-            h3 {
-                @include h4;
-                margin-bottom: 15px;
-            }
+        textarea.form-control {
+            height: 8.75em;
+            padding: 0.625em 1.5625em;
+            font-size: 1em;
+            font-family: "Poppins", sans-serif;
+        }
 
-            p {
-                @include p;
-            }
+        .btn {
+            @include p;
+            color: white;
+            margin: 0;
+            padding-left: 3.125em;
+            padding-right: 3.125em;
         }
     }
 }
-#modalService {
-    overflow: hidden;
-    width: 62.5%;
-    width: 100%;
-    position: relative;
-    height: 100%;
-    padding: 30px 15px;
-    text-align: center;
-    background-color: var(--bg-black-100);
-    border: 1px solid var(--bg-black-50);
-    border-radius: 10px;
-    transition: all 0.3s ease;
-    .icon {
-        display: block;
-        width: 60px;
-        height: 60px;
-        margin: 0 auto 30px;
-        border-radius: 50%;
-        line-height: 60px;
-        text-align: center;
-        transition: all 0.3s ease;
-        font-size: 25px;
-        color: var(--bg-black-100);
-        background-color: var(--skin-color);
+
+.error-message {
+color: var(--skin-color);
+position: relative;
+top: 0.625em;
+
+font-size: 0.875em;
+font-weight: 400;
+
+margin-left: 27px;
+}
+#modalContact {
+overflow: hidden;
+width: 100%;
+position: relative;
+height: 100%;
+padding: 1.5625em;
+text-align: center;
+background-color: var(--bg-black-100);
+border: 1px solid var(--bg-black-50);
+border-radius: 1em;
+.portfolio-item-inner {
+    border: 10px solid transparent;
+    .modalMessage {
+        width: 100%;
+        height: 100%;
+        padding: 0.9375em;
+        border-radius: 0.625em;
     }
 
-    h4 {
-        @include h4;
-        margin-bottom: 30px;
+    &:hover {
+        transform: scale(1);
     }
+}
 
-    p {
-        @include p;
-        color: var(--text-black-900);
-        margin: 15px 30px;
-        // margin-bottom: 15px;
-        text-align: left;
-    }
-    blockquote {
-        @include p;
-        color: var(--text-black-900);
-        margin: 0 30px 30px 30px;
-        // padding-left: 15px;
-        text-align: left;
-    }
+h4 {
+    @include h4;
+    margin-bottom: 1.5em;
+    color: var(--skin-color);
+}
 
-    ul {
-        li {
-            transition: transform 0.2s ease-in-out;
-            font-family: "Poppins", sans-serif;
-            font-size: 1em;
-            line-height: 1.5625em;
-            color: var(--text-black-700);
-            text-align: left;
-            margin: 0 30px 10px 30px;
-
-            i {
-                color: var(--text-black-500);
-                color: var(--skin-color);
-                margin-right: 0.5em;
-                // margin-left: 30px;
-            }
-            &::before {
-                font-family: "Font Awesome", sans-serif;
-            }
-        }
-    }
-    a {
-    }
+p {
+    @include p;
+    margin-bottom: 15px;
+}
 }
