--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,5 +8,5 @@
 @import "./01_base/03_navToggler";
 @import "./01_base/04_darkMode";
 @import "./01_base/04_responsive";
-@import "./01_base/05_tablette.scss";
+@import "./01_base/05_tablet.scss";
 @import "./01_base/06_mobile.scss";
