--- a/src/pages/portfolio/section_contact/contact.scss
+++ b/src/pages/portfolio/section_contact/contact.scss
@@ -63,7 +63,6 @@
             line-height: 25px;
             color: var(--text-black-700);
         }
-
     }
 
     &-form,
@@ -76,38 +75,81 @@
         }
 
         .form-item {
-            margin-bottom: 30px;
+            margin-bottom: 1.875em;
 
             .form-control {
                 width: 100%;
-                height: 50px;
-                border-radius: 25px;
+                height: 3.125em;
+                border-radius: 1.5625em;
                 background-color: var(--bg-black-100);
                 border: 1px solid var(--bg-black-50);
-                padding: 10px 25px;
+                padding: 0.625em 1.5625em;
                 font-size: 1em;
                 color: var(--text-black-700);
                 transition: all 0.3s ease;
                 text-transform: none;
                 &:focus {
-                    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+                    box-shadow: 0 0 1.25em rgba(48, 46, 77, 0.15);
                 }
             }
 
             textarea.form-control {
-                height: 140px;
-                padding: 10px 25px;
-                font-size: 1em; /* 16px / 16px */
+                height: 8.75em;
+                padding: 0.625em 1.5625em;
+                font-size: 1em;
                 font-family: "Poppins", sans-serif;
-                // background: #000;
             }
 
             .btn {
                 @include p;
                 color: white;
                 margin: 0;
-                padding-left: 50px;
-                padding-right: 50px;
+                padding-left: 3.125em;
+                padding-right: 3.125em;
+            }
+        }
+    }
+    .modal {
+        // position: fixed;
+        height: auto;
+        // position: fixed;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        background-color: transparent !important;
+        -webkit-backdrop-filter: blur(0px);
+        backdrop-filter: blur(0px);
+
+        .content {
+            position: relative;
+            top: 0;
+            overflow: hidden;
+            margin-right: 1%;
+            min-width: 300px;
+            min-height: 100px;
+            border-radius: 0.4375em;
+            width: 62.5em;
+            @include drop-shadow(1em 1em 1em rgba(0, 0, 0, 0.15));
+            margin: auto;
+            button {
+                position: absolute;
+                top: 1.125em;
+                left: calc(100% - 2.25em);
+                border: none;
+                background-color: transparent;
+
+                &:hover {
+                    // @include transform(scale(1.1));
+                }
+                svg {
+                    position: relative;
+                }
+                cursor: pointer;
             }
         }
     }
@@ -124,8 +166,8 @@
 }
 #modalContact {
     overflow: hidden;
-    width: 100%;
-    position: relative;
+    // width: 100%;
+    // position: relative;
     height: 100%;
     padding: 25px;
     text-align: center;
