--- a/src/pages/portfolio/section_home/home.scss
+++ b/src/pages/portfolio/section_home/home.scss
@@ -19,16 +19,24 @@
 .cont {
     height: 100vh;
     width: 100%;
+
     position: absolute;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
     top: 0;
 }
-.backgroundTest {
+.backgroundX {
     display: block;
-    // width: 12.5em;
     height: auto;
+    width: 100%;
+    overflow: hidden;
+}
+.backgroundY {
+    display: none;
+    height: auto;
+    width: 100%;
+    // overflow: hidden;
 }
 .border-design {
     @include drop-shadow(0.125em 0.1875em 0.625em var(--skin-color));
@@ -46,7 +54,7 @@
         gap: 7.2%;
         height: auto;
         // left: -2em;
-        // 
+        //
         padding: 1.25em 0 0 2.5em;
         margin: auto;
         max-width: 100%;
