--- a/src/assets/styles/01_base/_04_darkMode.scss
+++ b/src/assets/styles/01_base/_04_darkMode.scss
@@ -77,7 +77,7 @@ body.dark {
                 & .timeline-text {
                     &:hover {
                         .bd_Bottom {
-                            border-bottom: 0.0625em solid var(--skin-color-dark);
+                            border-bottom: 1px solid var(--skin-color-dark);
                             .fa-Circle {
                                 background: var(--skin-color-dark);
                             }
@@ -85,7 +85,7 @@ body.dark {
                     }
                     &_add {
                         .bd_Bottom {
-                            border-bottom: 0.0625em solid var(--skin-color-darked);
+                            border-bottom: 1px solid var(--skin-color-darked);
                             .fa-Circle {
                                 background: var(--skin-color-darked);
                                 .icon {
@@ -95,7 +95,7 @@ body.dark {
                         }
                     }
                     .bd_Last {
-                        // border-bottom: 0.0625em solid var(--skin-color-dark);
+                        // border-bottom: 1px solid var(--skin-color-dark);
                         opacity: 0.5;
                     }
                 }
