--- a/src/assets/styles/01_base/_05_tablet.scss
+++ b/src/assets/styles/01_base/_05_tablet.scss
@@ -1,79 +1,3 @@
-@media screen and (max-width: 1280px) {
-    .home {
-        .row {
-            .home
-                .row
-                .home-info
-                .home-card
-                .home-card-content
-                .content-inner_quote {
-                padding-left: 20px;
-            }
-        }
-    }
-    .modal {
-        min-height: calc(100vh);
-
-        .content {
-            width: calc(100% - 120px);
-            margin: auto;
-            height: inherit;
-            height: auto;
-            max-height: 100%;
-            #modalPortfolio {
-                max-height: calc(100%);
-                justify-items: center;
-                width: 100%;
-                height: 100%;
-                min-height: inherit;
-                flex-flow: column;
-                padding: 1.75em;
-                .portfolio-item-inner {
-                    flex: 1;
-                    max-width: inherit;
-                    img {
-                        object-fit: cover;
-                        object-position: top;
-                        width: 100%;
-                        max-height: 50vh;
-                    }
-                }
-                .modalPortfolio-description {
-                    max-width: 100%;
-                    max-height: inherit;
-                    padding: 0;
-                    padding: 1em 0 0em;
-
-                    h4.jobTitle {
-                        font-size: 16px;
-                        padding: 0 0 1em 0;
-                    }
-                    p.timeline-anime {
-                        font-size: 14px;
-                        margin: 0 0 1em 0;
-                    }
-                    .link {
-                        max-height: 3.5em;
-                        padding: 0 0 0.5em 0;
-                        span.button {
-                            margin: 0 0 0.25em 0;
-                            padding: 0;
-                            a {
-                                font-size: 16px !important;
-                            }
-                        }
-                    }
-                    ul {
-                        padding: 0 0 0.5em 0;
-                        li.ul-anime {
-                            font-size: 14px;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
 @media screen and (max-width: 1110px) {
     .home {
         .row {
@@ -81,9 +5,105 @@
         }
     }
 }
-@media screen and (max-width: 1010px) {
+@media screen and (max-width: 1080px) {
     .home {
         .row {
+            flex-flow: column nowrap;
+            border: 1px solid var(--bg-black-50);
+            top: 0;
+            padding: 0 0.5em 50px 0.5em;
+            min-height: 826.48px;
+            .home-info {
+                position: static;
+                .home-title {
+                    position: absolute;
+                    text-align: center;
+                    top: 0;
+                    width: 100%;
+                    span.name {
+                        display: block;
+                    }
+                }
+                .home-card {
+                    justify-content: flex-start;
+                    width: 100%;
+                    margin: 0;
+                    position: static;
+                    top: 0;
+                    &_group {
+                        width: 100%;
+                        text-align: center;
+                        margin: 0;
+                        .presentation_title {
+                            display: none;
+                        }
+                        .presentation_typing {
+                            font-size: 1.875em;
+                        }
+                    }
+                    .home-card-content {
+                        display: flex;
+                        flex-flow: column;
+                        justify-content: center;
+                        margin: 0.75em 0.5em 0 0.5em;
+                        &_description {
+                            text-align: center;
+                            .home-quote {
+                                text-align: center;
+                                position: static;
+                                margin: 0 auto 0.675em;
+                                padding: 0;
+                                display: inline-block;
+                            }
+                        }
+                        .content-inner {
+                            align-self: center;
+                            margin: 0 0.65em 0;
+                            max-width: 391px;
+                        }
+                    }
+                }
+            }
+            .blockImg {
+                margin-top: 110px;
+                height: 333px;
+                .home-img {
+                    &::after {
+                        top: 90px;
+                        left: 0px;
+                        width: 100.13px;
+                        height: 160px;
+                    }
+                    &::before {
+                        bottom: -37px;
+                        right: -8px;
+                    }
+                    .centerNB {
+                        height: 360px;
+                    }
+                }
+            }
+        }
+        .bgDraw {
+            .tsparticles {
+                top: -180px !important;
+                right: -300px !important;
+            }
+        }
+        .bgDraw2 {
+            width: calc(100% - 0px);
+            margin: auto;
+            height: calc(50vh - 400px) !important;
+            bottom: 0vh !important;
+            left: 0px;
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .home {
+        .row {
+            max-width: calc(100% - 280px);
             flex-flow: column nowrap;
             border: 1px solid var(--bg-black-50);
             top: 0;
@@ -178,25 +198,7 @@
             left: 0px;
         }
     }
-    @media screen and (max-height: 1180px) {
-        .bgDraw2 {
-            bottom: 0px !important;
-            .tsparticles2,
-            #tsparticles2 {
-                width: 100% !important;
-                height: calc(50vh - 404px) !important;
-                bottom: 0px !important;
-                left: 0 !important;
-            }
-        }
-    }
-}
-@media screen and (max-width: 992px) {
-    .home {
-        .row {
-            max-width: calc(100% - 280px);
-        }
-    }
+
     #tablet {
         display: flex;
     }
@@ -536,7 +538,30 @@
             }
         }
     }
+    @media screen and (max-height: 1180px) {
+        .bgDraw2 {
+            bottom: 0px !important;
+            .tsparticles2 {
+                width: 100% !important;
+                height: calc(50vh - 413.5px) !important;
+                bottom: 0px !important;
+                left: 0 !important;
+            }
+        }
+    }
+    @media screen and (min-height: 1181px) {
+        .bgDraw2 {
+            bottom: 0px !important;
+            .tsparticles2 {
+                width: 100% !important;
+                height: calc(50vh - 475px) !important;
+                bottom: 5.3vh !important;
+                left: 0 !important;
+            }
+        }
+    }
 }
+
 @media screen and (max-width: 839px) {
     .home,
     .about,
