--- a/src/assets/styles/01_base/_06_mobile.scss
+++ b/src/assets/styles/01_base/_06_mobile.scss
@@ -2,80 +2,84 @@
     .home {
         .row {
             min-width: calc(100% - 0px);
-            min-height: 0px !important;
-            padding: 0px 0.5em 1.5em !important;
-            max-height: 762px;
+            min-height: initial;
+            height: calc(100% - 200px);
+            padding: 0px 0.5em 1.5em ;
+            max-height: 82vh;
             .home-info {
-                position: relative !important;
-                top: -3em !important;
+                order: 5;
+                position: static;
+                top: -3em;
                 .home-title {
-                    position: static !important;
-                    margin: 0 !important;
-                    padding: 0.5em 0 0 0 !important;
-
+                    position: relative;
+                    margin: 0;
+                    padding: 0.5em 0 0 0;
+                    top: 220px;
                     span.name {
-                        margin: 0 !important;
+                        margin: 0;
                     }
                 }
                 .home-card {
                     position: relative;
-                    top: 200px;
-
+                    top: 20px;
                     margin-top: 200px;
                     &_group {
+                        position: static;
                         display: inline;
                         .presentation_title {
-                            display: inline !important;
-                            font-size: 1.5em !important;
+                            display: inline;
+                            font-size: 1.5em;
                             &::first-letter {
                                 text-transform: capitalize;
                             }
                         }
-
                         .typing {
-                            font-size: 0.8em !important;
+                            font-size: 0.8em;
                             text-transform: lowercase;
                         }
                     }
+                    &-content {
+                        padding-bottom: 1.65em;
+                    }
                 }
                 .hire-me {
-                    bottom: -3.1875em;
-                    margin: 0;
+                    position: absolute;
+                    margin: auto;
+                    margin-top: 1.65em;
                     padding: 0.78125em 2.1875em;
                 }
             }
             .blockImg {
-                height: 200px !important;
+                height: 200px;
                 max-height: 200px;
-                margin: 1.5em 0 0 0 !important;
-
-                position: relative !important;
-
+                margin: 1.5em 0 0 0;
+                position: absolute;
                 .home-img {
+                    max-height: 200px;
                     &::after {
-                        top: 40px !important;
-                        left: 40px !important;
-                        width: 150px !important;
-                        height: 160px !important;
+                        top: 40px;
+                        left: 40px;
+                        width: 150px;
+                        height: 160px;
                         border-top-left-radius: 20px;
                         border-width: 1px;
                     }
                     &::before {
-                        bottom: -0px !important;
-                        right: 41px !important;
-                        height: 160px !important;
-                        width: 150px !important;
+                        bottom: -0px;
+                        right: 41px;
+                        height: 160px;
+                        width: 150px;
                         border-width: 1px;
                     }
                     .centerNB {
-                        height: 200px !important;
+                        max-height: 200px;
+                        height: 200px;
                         background-size: contain;
                     }
                 }
             }
         }
     }
-
     .about,
     .service,
     .portfolio,
@@ -93,28 +97,26 @@
     .about {
         .container {
             .col_end {
-                display: block !important;
-                height: 45px !important;
+                display: block;
+                height: 45px;
             }
         }
     }
 
     .bgDraw2 {
         width: calc(100% - 0em);
-        height: calc(50vh - 293.5px) !important;
-        bottom: 6.14% !important;
+        height: calc(50vh - 293.5px);
         .tsparticles2,
         #tsparticles2 {
-            width: 100% !important;
-            height: 100% !important;
-            bottom: 0 !important;
-            left: 0 !important;
+            width: 100%;
+            height: 100%;
+            bottom: 0;
+            left: 0;
         }
     }
     .service_container {
         .service-item {
             max-width: calc(50% - 15px);
-
             .service-item-inner {
                 padding: 0.78125em 0.78125em 0.78125em 0.78125em;
                 .icon {
@@ -125,10 +127,8 @@
                     padding: 0;
                 }
                 h3 {
-                    // font-size: 1em;
                     margin: 0.78125em 0 0.390625em 0;
                 }
-
                 p {
                     overflow: hidden;
                     white-space: nowrap;
@@ -138,6 +138,7 @@
         }
     }
 }
+
 @media screen and (max-width: 560px) {
     .home {
         .row {
@@ -145,7 +146,7 @@
                 .home-card {
                     height: auto;
                     .home-card-content {
-                        margin: 0.75em 0 0 0 !important;
+                        margin: 0.75em 0 0 0;
                     }
                 }
             }
@@ -180,6 +181,7 @@
         }
     }
 }
+
 @media screen and (max-width: 520px) {
     .portfolio .portfolio-heading h3 {
         margin-bottom: 15px;
@@ -188,18 +190,18 @@
         &-content {
             .row {
                 .buttons {
-                    position: static !important;
-                    display: flex !important;
-                    flex-flow: row wrap !important;
+                    position: static;
+                    display: flex;
+                    flex-flow: row wrap;
                     & .btn_right {
-                        position: relative !important;
-                        display: block !important;
-                        flex: 1 !important;
+                        position: relative;
+                        display: block;
+                        flex: 1;
                     }
                     .btn_left {
-                        position: relative !important;
-                        display: block !important;
-                        flex: 1 !important;
+                        position: relative;
+                        display: block;
+                        flex: 1;
                         top: -27.5px;
                     }
                 }
@@ -255,7 +257,6 @@
         &-form .col-12 {
             flex: 0 0 100%;
             max-width: 100%;
-
             .col-6 {
                 flex: 1;
                 flex: 0 0 100%;
@@ -289,21 +290,24 @@
         }
     }
 }
+
 @media screen and (max-width: 463px) {
     .bgDraw2 {
-        height: calc(50vh - 303.5px) !important;
+        height: calc(50vh - 303.5px);
     }
     .contact .container .row_center .row-col {
         gap: 10px;
         flex-flow: column wrap;
     }
 }
+
 @media screen and (max-width: 423px) {
     .contact .container .row_center .row-col {
         gap: 10px;
         flex-flow: column wrap;
     }
 }
+
 @media screen and (max-width: 410px) {
     .backgroundX {
         display: none;
@@ -368,7 +372,6 @@
                 &.style-switcher-toggler {
                     top: -20px;
                 }
-
                 &.day-night {
                     top: -17px;
                 }
@@ -400,7 +403,6 @@
             max-width: calc(100% - 40px);
         }
     }
-
     .contact-info-item h4 {
         margin: 7.5px 0 3.25px;
     }
@@ -409,19 +411,17 @@
     .home {
         .row {
             max-width: calc(100% - 0px);
-            padding: 0px 0.25em 1.5em !important;
+            padding: 0px 0.25em 1.5em;
             .home-info .home-card {
                 &-content {
-                    margin: 0.75em 0.5em 0 0.5em !important;
+                    margin: 0.75em 0.5em 0 0.5em;
                 }
                 &_group {
                     .presentation_title {
-                        // display: inline !important;
-                        font-size: 1.25em !important;
+                        font-size: 1.25em;
                     }
                     .presentation_typing {
-                        // display: inline !important;
-                        font-size: 1.55em !important;
+                        font-size: 1.55em;
                     }
                 }
             }
@@ -480,6 +480,7 @@
         }
     }
 }
+
 @media screen and (max-width: 360px) {
     body {
         font-size: 14.5px;
@@ -487,22 +488,21 @@
     .home {
         .row {
             max-width: calc(100% - 0px);
-            padding: 0px 0.25em 1.5em !important;
+            padding: 0px 0.25em 1.5em;
             .home-info .home-card .home-card-content {
-                margin: 0.75em 0.5em 0 0.5em !important;
+                margin: 0.75em 0.5em 0 0.5em;
             }
             .blockImg {
                 .home-img {
                     min-width: 220px;
                     max-width: 220px;
                     &::after {
-                        left: 0px !important;
-                        width: 220px !important;
+                        left: 0px;
+                        width: 220px;
                     }
                     &::before {
-                        right: 0px !important;
-
-                        width: 220px !important;
+                        right: 0px;
+                        width: 220px;
                     }
                 }
             }
@@ -558,6 +558,7 @@
         }
     }
 }
+
 @media screen and (max-width: 340px) {
     body {
         font-size: 14px;
@@ -565,20 +566,19 @@
     .home {
         .row {
             max-width: calc(100% - 0px);
-            padding: 0px 0.25em 1.5em !important;
+            padding: 0px 0.25em 1.5em;
 
             .blockImg {
                 .home-img {
                     min-width: 220px;
                     max-width: 220px;
                     &::after {
-                        left: 0px !important;
-                        width: 220px !important;
+                        left: 0px;
+                        width: 220px;
                     }
                     &::before {
-                        right: 0px !important;
-
-                        width: 220px !important;
+                        right: 0px;
+                        width: 220px;
                     }
                 }
             }
@@ -587,7 +587,7 @@
                     display: none;
                 }
                 .home-card .home-card-content {
-                    margin: 0.75em 0.25em 0 0.25em !important;
+                    margin: 0.75em 0.25em 0 0.25em;
                 }
             }
         }
