--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -23,7 +23,7 @@ a.btn_a {
     cursor: pointer;
 
     -webkit-font-smoothing: antialiased;
-    box-shadow: 0px 0.25em 0.9375em rgba(0, 0, 0, 0.25);
+    // filter: drop-shadow(0px 0.25em 0.9375em rgba(0, 0, 0, 0.25));
     @include drop-shadow(0 0.25em 0.9375em rgba(48, 46, 77, 0.1));
 
     margin: 1.875em 0 3.625em 0.4375em;
@@ -72,7 +72,8 @@ a.btn_a {
             var(--skin-color) 50%,
             var(--skin-color-dark) 100%
         );
-        box-shadow: 0.125em 0.25em 0.9375em rgba(0, 0, 0, 0.35);
+        // filter: drop-shadow(0px 0.25em 0.9375em rgba(0, 0, 0, 0.25));
+        @include drop-shadow(0 0.25em 0.9375em rgba(48, 46, 77, 0.1));
         transition: all 450ms;
     }
 }
