--- a/src/pages/portfolio/section_home/home.scss
+++ b/src/pages/portfolio/section_home/home.scss
@@ -165,8 +165,7 @@
             position: relative;
             max-width: 47em;
             height: 100%;
-            // max-height: 21.125em;
-            height: 21.125em;
+            max-height: 21.125em;
             .home-img {
                 width: 100%;
                 z-index: 1;
@@ -175,8 +174,6 @@
                 justify-content: space-between;
                 align-items: center;
                 border-top-right-radius: 1.25em;
-                max-width: 15.625vw;
-                height: 17.55vw;
                 &::after {
                     @include after_Before;
                     top: -0.625em;
@@ -205,10 +202,9 @@
                     align-self: center;
                     flex: 5;
                     min-width: 15.46875em;
-
+                    height: 25em;
                     display: flex;
-                    height: 12.109vw;
-                    width: 11.614vw;
+                    max-width: 19.625em;
                 }
                 img {
                     margin: auto;
