--- a/src/pages/portfolio/section_home/home.scss
+++ b/src/pages/portfolio/section_home/home.scss
@@ -52,8 +52,9 @@
         height: auto;
         padding: 1.25em 0 0 2.5em;
         margin: auto;
-        max-width: 100%;
+        // max-width: 100%;
         max-width: 66vw;
+        min-width: 53.04vw;
 
         border-bottom-left-radius: 1.25em;
         border-top-left-radius: 1.25em;
